--- a/CeylanMotors/GaleriClient/Views/Home/Index.cshtml
+++ b/CeylanMotors/GaleriClient/Views/Home/Index.cshtml
@@ -50,26 +50,27 @@
 
 
         @* yakında kısmı başlangıç*@
-  
-        <div class="body" style="background-color:#191919; padding: 20px;">
-            <h1 class="hero-text">Satışı Yapılan Araçlarımız</h1>
-            <div class="container">
-                <div class="row">
-                    @foreach (YakindaViewModel item in ViewBag.Yakinda)
-                    {
-                        <div class="col-md-4 mb-4">
-                            <div class="card">
-                            <img src="https://localhost:7280/uploads/@(item.YakindaImageName)" class="d-block w-100" alt="..." style="border:5px solid darkred;border-radius:20px;">
-                                <div class="card-body">
-                                    <h2>@item.YakindaAd</h2>
-                                   <h5>@item.YakindaAciklama</h5>
-                                </div>
+
+    <div class="body" style="background-color:#191919; padding: 20px;">
+        <h1 class="hero-text">Satışı Yapılan Araçlarımız</h1>
+        <div class="container">
+            <div class="row">
+                @foreach (YakindaViewModel item in ViewBag.Yakinda)
+                {
+                    <div class="col-md-3 mb-3">
+                        <div class="card">
+                            <img src="https://localhost:7280/uploads/@(item.YakindaImageName)" class="d-block w-100" alt="..."
+                                 style="border:5px solid darkred; border-radius:20px; width: 100%; height: 250px; object-fit: cover;">
+                            <div class="card-body">
+                                <h2>@item.YakindaAd</h2>
+                                <h5>@item.YakindaAciklama</h5>
                             </div>
                         </div>
-                    }
-                </div>
+                    </div>
+                }
             </div>
         </div>
+    </div>
 
            
            
