--- a/CeylanMotors/GaleriAdmin/Views/Account/Login.cshtml
+++ b/CeylanMotors/GaleriAdmin/Views/Account/Login.cshtml
@@ -62,6 +62,9 @@
                         </div>
                         
                         <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Giriş Yap</button>
+                            <span style="color:white">@ViewBag.ErrorData</span>
+                            <span style="color:wheat">@ViewBag.User</span>
+                           
                         </form>
                     </div>
                 </div>
