--- a/CeylanMotors/GaleriClient/Views/İletisim/Index.cshtml
+++ b/CeylanMotors/GaleriClient/Views/İletisim/Index.cshtml
@@ -4,6 +4,14 @@
 
     ViewBag.Title = "İletişim";
 }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+   @*  <link href="~/iletisimcss/iletisimcss.css" rel="stylesheet" /> *@
+</head>
 <body style="background-color:#191919">
     <div class="container-xxl py-6">
         <div class="container" style="position:relative">
